<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>EvenMe</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>

        <slf4jVersion>2.0.13</slf4jVersion>
        <wikidataToolkitVersion>0.11.0</wikidataToolkitVersion>

    </properties>

    <dependencies>
        <dependency>
            <groupId>edu.stanford.nlp</groupId>
            <artifactId>stanford-corenlp</artifactId>
            <version>4.4.0</version>
        </dependency>

        <dependency>
            <groupId>edu.stanford.nlp</groupId>
            <artifactId>stanford-corenlp</artifactId>
            <version>4.4.0</version>
            <classifier>models</classifier>
        </dependency>

        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>1.15.1</version>
        </dependency>

        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.9.0</version>
        </dependency>

        <dependency>
            <groupId>org.wikidata.wdtk</groupId>
            <artifactId>wdtk-datamodel</artifactId>
            <version>${wikidataToolkitVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.wikidata.wdtk</groupId>
            <artifactId>wdtk-dumpfiles</artifactId>
            <version>${wikidataToolkitVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.wikidata.wdtk</groupId>
            <artifactId>wdtk-rdf</artifactId>
            <version>${wikidataToolkitVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.wikidata.wdtk</groupId>
            <artifactId>wdtk-wikibaseapi</artifactId>
            <version>${wikidataToolkitVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.12</version>
        </dependency>

        <dependency>
            <groupId>org.neo4j.driver</groupId>
            <artifactId>neo4j-java-driver</artifactId>
            <version>4.4.5</version>
        </dependency>
    </dependencies>
</project>